Work on writeProperty REST API
